--- a/_posts/2020-02-21-short-bio.markdown
+++ b/_posts/2020-02-21-short-bio.markdown
@@ -5,14 +5,12 @@ date:   2020-02-20 01:34:36 +0530
 categories: Bio
 ---
 
-I am a second-year Master's student in [Brown University][brown], working with [Prof. Michael Littman][litt]. I obtained my B.S from [Beihang University][buaa], under supervision of [Prof. Jingyuan Wang][jjy].  
+I am an incoming PhD student in [Columbia University][col] working with [Prof. Elias Bareinboim][elias]. Previously, I finished my Master's studies in [Brown University][brown], working with [Prof. Michael Littman][litt]. I obtained my B.S from [Beihang University][buaa], under the supervision of [Prof. Jingyuan Wang][jjy].  
   
-My research interest lies in reinforcement learning, especially in how to build reliable generalization and sample efficient agent. I want to know ***[how we can get so much from so little][cong]*** through the intersection of reinforcement learning and cognitive science.  
-  
-Currently, I focus on learning abstractions and utilizing the relational structure of observations to achieve sample efficient agent.
-  
-I am going to apply for 2021 Fall PhD position this semester. Shoot me an email if you have openings! Feel free to take a look at [this slide][slide], which summarizes my take on RL agents.  
+My research interest lies in the intersection of causal inference and reinforcement learning, especially in how to build reliable, generalizable and sample efficient agent. Feel free to take a look at [this slide][slide], which summarizes my take on RL agents.  
 
+[elias]: https://causalai.net
+[col]: https://www.columbia.edu
 [cong]: http://web.mit.edu/cocosci/josh.html
 [litt]: http://cs.brown.edu/~mlittman/
 [gkd]: http://cs.brown.edu/people/gdk/
