--- a/_posts/2020-02-21-short-bio.markdown
+++ b/_posts/2020-02-21-short-bio.markdown
@@ -5,7 +5,7 @@ date:   2020-02-20 01:34:36 +0530
 categories: Bio
 ---
 
-I am a second-year computer science PhD student in the [Causal Artificial Intelligence Lab][clab] at [Columbia University][col] working with [Prof. Elias Bareinboim][elias]. During my wonderful Master's studies in [Brown University][brown], I was fortunate enough to work with [Prof. Michael Littman][litt]. I obtained my B.S from [Beihang University][buaa], under the supervision of [Prof. Jingyuan Wang][wjy].  
+I am a third-year computer science PhD student in the [Causal Artificial Intelligence Lab][clab] at [Columbia University][col] working with [Prof. Elias Bareinboim][elias]. During my wonderful Master's studies in [Brown University][brown], I was fortunate enough to work with [Prof. Michael Littman][litt]. I obtained my B.S from [Beihang University][buaa], under the supervision of [Prof. Jingyuan Wang][wjy].  
   
 My research interest lies in the intersection of causal inference and reinforcement learning, especially in how to build reliable, generalizable and sample efficient agent. 
 
